Add configuration for managing widget refresh

--- a/src/static/bitbucket/index.ejs
+++ b/src/static/bitbucket/index.ejs
@@ -11,6 +11,9 @@
           Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
       }
   </style>
+    <script>
+      window.__WIDGET_SETTINGS__ = <%= widgetSettings %>
+    </script>
 </head>
 <body>
 <div id="app" class="ac-content" style="min-height: 90px">
